--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,61 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: 'Roboto', sans-serif;
+    line-height: 1.4;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-p{
+p {
     margin: 0.75rem 0;
 }
 
 /*Utility classes*/
 
-.text-primary{
-    color:#93cb52;
+.text-primary {
+    color: #93cb52;
 }
 
+.l-heading {
+    font-size: 4rem;
+    margin-bottom: .75rem;
+    line-height: 1.1;
+}
+
+.lead{
+    font-size: 1.3rem;
+    margin-bottom: 2rem;
+}
+
+.btn{
+    display: inline-block;
+    color: #ffffff;
+    background: #93cb52;
+    padding: .5rem 2rem;
+    border: none;
+    border-radius: 5px;
+}
+
+.btn:hover{
+    background: #7ab436;
+}
+
+.btn-dark{
+    background: #333333;
+    color: #ffffff;
+}
 /* NAVBAR */
 
-#navbar{
+#navbar {
     display: flex;
     position: sticky;
     top: 0;
@@ -37,20 +66,43 @@ p{
     padding: 1rem;
 }
 
-#navbar ul{
+#navbar ul {
     display: flex;
     list-style: none;
     align-items: center;
 }
 
-#navbar ul li a{
+#navbar ul li a {
     color: #ffffff;
     padding: 0.75rem;
     margin: 0 0.75rem;
 }
 
-#navbar ul li a:hover{
+#navbar ul li a:hover {
     background: #93cb52;
     color: #333333;
     border-radius: 5px;
+}
+
+/* SHOWCASE */
+
+#showcase {
+    background: #333333 url("../img/showcase.jpg") no-repeat center center/cover;
+    height: 100vh;
+    color: #ffffff;
+}
+
+#showcase .showcase-content {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 0 2rem;
+    /*    overlay*/
+    /*    position: absolute;*/
+    /*    top:61px;*/
+    /*    left: 0;*/
+    background-color: rgba(0, 0, 0, 0.5);
 }
