--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,17 @@ p {
 
 /*Utility classes*/
 
+.container {
+    max-width: 1100px;
+    margin: auto;
+    padding: 0 2rem;
+    overflow: hidden;
+}
+
+.text-center {
+    text-align: center;
+}
+
 .text-primary {
     color: #93cb52;
 }
@@ -31,12 +42,30 @@ p {
     line-height: 1.1;
 }
 
-.lead{
+.m-heading {
+    font-size: 2rem;
+    margin-bottom: .75rem;
+    line-height: 1.1;
+}
+
+.lead {
     font-size: 1.3rem;
     margin-bottom: 2rem;
 }
 
-.btn{
+.py-1 {
+    padding: 1.5rem 0;
+}
+
+.py-2 {
+    padding: 2rem 0;
+}
+
+.py-3 {
+    padding: 3rem 0;
+}
+
+.btn {
     display: inline-block;
     color: #ffffff;
     background: #93cb52;
@@ -45,14 +74,15 @@ p {
     border-radius: 5px;
 }
 
-.btn:hover{
+.btn:hover {
     background: #7ab436;
 }
 
-.btn-dark{
+.btn-dark {
     background: #333333;
     color: #ffffff;
 }
+
 /* NAVBAR */
 
 #navbar {
@@ -101,8 +131,30 @@ p {
     height: 100%;
     padding: 0 2rem;
     /*    overlay*/
-    /*    position: absolute;*/
-    /*    top:61px;*/
-    /*    left: 0;*/
+    /*position: absolute;*/
+    /*top: 62px;*/
+    /*left: 0;*/
+    /*right: 0;*/
+    /*bottom: 0;*/
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* What We Do Section */
+
+#what .items {
+    display: flex;
+    padding: 1rem;
+}
+
+#what .item {
+    flex: 1;
+    text-align: center;
+    padding: 1rem;
+}
+
+#what .items .item i {
+    background: #93cb52;
+    padding: 1rem;
+    border-radius: 50%;
+    margin-bottom: 1rem;
 }
