--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,16 @@ p {
     color: #93cb52;
 }
 
+.bg-light {
+    background: #f4f4f4;
+    color: #333333;
+}
+
+.bg-dark {
+    background: #333333;
+    color: #ffffff;
+}
+
 .l-heading {
     font-size: 4rem;
     margin-bottom: .75rem;
@@ -65,6 +75,18 @@ p {
     padding: 3rem 0;
 }
 
+.p-1 {
+    padding: 1.5rem ;
+}
+
+.p-2 {
+    padding: 2rem ;
+}
+
+.p-3 {
+    padding: 3rem ;
+}
+
 .btn {
     display: inline-block;
     color: #ffffff;
@@ -81,6 +103,16 @@ p {
 .btn-dark {
     background: #333333;
     color: #ffffff;
+}
+
+.list {
+    margin: .5rem 0;
+    list-style: none;
+}
+
+.list li{
+    padding: .5rem 0;
+    border-bottom: #444444 dotted 1px;
 }
 
 /* NAVBAR */
@@ -157,4 +189,17 @@ p {
     padding: 1rem;
     border-radius: 50%;
     margin-bottom: 1rem;
+}
+
+/* Section Who We Are*/
+#who {
+    display: flex;
+}
+
+#who div{
+    flex: 1;
+}
+
+#who .who-img{
+    background: url("../img/people.jpg") no-repeat center center/cover;
 }
