--- a/css/style.css
+++ b/css/style.css
@@ -203,3 +203,17 @@ p {
 #who .who-img{
     background: url("../img/people.jpg") no-repeat center center/cover;
 }
+
+
+/* Clients */
+
+#clients .items{
+    display: flex;
+}
+
+#clients .items img{
+    display: block;
+    margin: auto;
+    width: 60%;
+}
+
