smooth scrolling and sticky menu background in main.js

--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ p {
     display: flex;
     position: sticky;
     top: 0;
-    background: #333333;
+    background: rgb(51, 51, 51);
     color: #ffffff;
     justify-content: space-between;
     z-index: 999;
